--- a/For_Soviet_People_229351_LAB07.ipynb
+++ b/For_Soviet_People_229351_LAB07.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": null,
       "metadata": {
         "id": "ntO6KNB7A24q",
         "colab": {
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": null,
       "metadata": {
         "id": "O_4Mr2OWaAae",
         "colab": {
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": null,
       "metadata": {
         "id": "xvDqcZfk_qnG",
         "colab": {
@@ -487,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": null,
       "metadata": {
         "id": "XlOmwZlvQXAR",
         "colab": {
@@ -536,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": null,
       "metadata": {
         "id": "uLsFyB04uVMQ"
       },
@@ -560,7 +560,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": null,
       "metadata": {
         "id": "z19s30_3ARua",
         "colab": {
@@ -590,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": null,
       "metadata": {
         "id": "6njJmujsAUNv",
         "colab": {
@@ -640,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": null,
       "metadata": {
         "id": "kD8uzgohDRIX",
         "colab": {
@@ -691,7 +691,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": null,
       "metadata": {
         "id": "yyk9EnXdD0ZU",
         "colab": {
@@ -745,7 +745,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": null,
       "metadata": {
         "id": "NFJIBKvEvG9b",
         "colab": {
@@ -831,7 +831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": null,
       "metadata": {
         "id": "gN5NT4eD2DC_",
         "colab": {
@@ -1138,7 +1138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": null,
       "metadata": {
         "id": "vB1M4irSS5yz",
         "colab": {
@@ -1189,7 +1189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": null,
       "metadata": {
         "id": "T8DKt5uKTR2p",
         "colab": {
@@ -1228,7 +1228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": null,
       "metadata": {
         "id": "-qGFMS4s_R8Q",
         "colab": {
@@ -1542,7 +1542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": null,
       "metadata": {
         "id": "-gCRXKb8fkuH",
         "colab": {
@@ -1592,7 +1592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": null,
       "metadata": {
         "id": "trjE1AUq5ID3",
         "colab": {
@@ -1621,7 +1621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": null,
       "metadata": {
         "id": "mftO6EDP_R8R",
         "colab": {
@@ -1644,7 +1644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": null,
       "metadata": {
         "id": "-QbEbw2lpYI-",
         "colab": {
@@ -1696,7 +1696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": null,
       "metadata": {
         "id": "-LrSrCk6BcBM",
         "colab": {
@@ -1772,7 +1772,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": null,
       "metadata": {
         "id": "1aAV_M9ia3_c",
         "colab": {
@@ -2137,7 +2137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": null,
       "metadata": {
         "id": "9aIK3KFEcETA"
       },
@@ -2178,7 +2178,7 @@
       "metadata": {
         "id": "2QAlbyMrUqvk"
       },
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2190,7 +2190,7 @@
       "metadata": {
         "id": "h3Ak-UU1U0ud"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2213,7 +2213,7 @@
         "id": "ohPVxv7sU2NG",
         "outputId": "fe258195-979d-4978-b1db-efbdfeed6b98"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2262,7 +2262,7 @@
         "id": "9vM3QyurU9gy",
         "outputId": "99abb30e-f294-46ef-9e9d-208ea5d7a63f"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2311,8 +2311,8 @@
         "\n",
         "b2 = model.params['ShelveLoc[T.Good]']\n",
         "\n",
-        "print(\"medium better bad = \",b1)\n",
-        "print(\"good better bad = \",b2)"
+        "print(\"medium better bad = \",b1,'พันบาท')\n",
+        "print(\"good better bad = \",b2,'พันบาท')"
       ],
       "metadata": {
         "colab": {
@@ -2321,7 +2321,7 @@
         "id": "caNyYmkQIUXh",
         "outputId": "a6421bc6-3d6a-4f3e-80fe-37f2f63dfb73"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2349,9 +2349,9 @@
         "b2 = model.params['ShelveLoc[T.Good]']\n",
         "diff = b2 - b1\n",
         "if diff > 0 :\n",
-        "  print(\" Good  better Medium:\", diff)\n",
+        "  print(\" Good  better Medium:\", diff,'พันบาท')\n",
         "else:\n",
-        "  print(\" Good Worse Medium :\", diff)"
+        "  print(\" Good Worse Medium :\", diff,'พันบาท')"
       ],
       "metadata": {
         "colab": {
@@ -2360,7 +2360,7 @@
         "id": "lt0m5Ga-I1na",
         "outputId": "3c3ff955-74a6-4dce-e19d-0411a17c69b6"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2398,7 +2398,7 @@
         "id": "FBeHhxCzJQCO",
         "outputId": "c3e44795-fe11-4b44-8a2d-c8cd6d7e4568"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2435,7 +2435,7 @@
         "id": "2nMWm0zyWehY",
         "outputId": "e53f6423-aec0-4d55-d0f3-30cef24bc4bb"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2511,7 +2511,7 @@
         "id": "PXjLE_WbW1Vh",
         "outputId": "570f95a7-bd20-4fad-ad23-151f5d766a49"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2821,7 +2821,7 @@
         "id": "a4L9_i54XGTF",
         "outputId": "713e7612-7821-45da-fd64-92afd7b429a9"
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2870,7 +2870,7 @@
         "id": "gefU4uaTXXDP",
         "outputId": "4fbf3ff2-d73a-4775-d72b-8735435e3db8"
       },
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2928,7 +2928,7 @@
         "id": "yxzzjhbBXald",
         "outputId": "431dae42-00d8-4d61-bad6-f90dfad77b95"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
